--- a/medical.html
+++ b/medical.html
@@ -14,11 +14,11 @@
         </div>
         <div class="page">
             <ul type="None">
-                <a href="index.php"><li class="l1">Home</li></a>
-                <a href="service.php"><li class="l1">Service</li></a>
-                <a href="index.php"><li class="l1">Contact</li></a>
-                <a href="index.php"><li class="l1">Login</li></a>
-                <a href="index.php" class="about">About Us</a>
+                <a href="index.html"><li class="l1">Home</li></a>
+                <a href="service.html"><li class="l1">Service</li></a>
+                <a href="index.html"><li class="l1">Contact</li></a>
+                <a href="Registration.html"><li class="l1">Login</li></a>
+                <a href="Forgotpass.html" class="about">About Us</a>
             </ul>
         </div>
          
@@ -38,7 +38,7 @@
             <div class="content">
                 <p>Shree Medical</p>
                 <p>Aran</p>
-                <a href="service.php#c1" title="Take more information about Shree Medical">Know More</a>
+                <a href="service.html#c1" title="Take more information about Shree Medical">Know More</a>
             </div>
         </div>
 
@@ -49,7 +49,7 @@
             <div class="content">
                 <p>Suvarna Medical</p>
                 <p>Barshi</p>
-                <a href="service.php#c2" title="Take more information about Shree Medical">Know More</a>
+                <a href="service.html#c2" title="Take more information about Shree Medical">Know More</a>
             </div>
         </div>
 
@@ -60,7 +60,7 @@
             <div class="content">
                 <p>Anand Medical</p>
                 <p>Chale</p>
-                <a href="service.php#c3" title="Take more information about Shree Medical">Know More</a>
+                <a href="service.html#c3" title="Take more information about Shree Medical">Know More</a>
             </div>
         </div>
     </div>
@@ -73,7 +73,7 @@
             <div class="content">
                 <p>Barshi Medical</p>
                 <p>Barshi</p>
-                <a href="service.php#c4">Know More</a>
+                <a href="service.html#c4">Know More</a>
             </div>
         </div>
 
@@ -84,7 +84,7 @@
             <div class="content">
                 <p>Pushkar Medical</p>
                 <p>Pandharpur</p>
-                <a href="service.php#c5">Know More</a>
+                <a href="service.html#c5">Know More</a>
             </div>
         </div>
 
@@ -95,7 +95,7 @@
             <div class="content">
                 <p>Samarth Medical</p>
                 <p>Pandharpur</p>
-                <a href="service.php#c6">Know More</a>
+                <a href="service.html#c6">Know More</a>
             </div>
         </div>
     </div>
@@ -108,7 +108,7 @@
             <div class="content">
                 <p>Anant Medical</p>
                 <p>Pandharpur</p>
-                <a href="service.php#c7">Know More</a>
+                <a href="service.html#c7">Know More</a>
             </div>
         </div>
 
@@ -119,7 +119,7 @@
             <div class="content">
                 <p>Gajanan Medical</p>
                 <p>Pandharpur</p>
-                <a href="service.php#c8">Know More</a>
+                <a href="service.html#c8">Know More</a>
             </div>
         </div>
 
@@ -130,7 +130,7 @@
             <div class="content">
                 <p>Om Medical</p>
                 <p>Barshi</p>
-                <a href="service.php#c9">Know More</a>
+                <a href="service.html#c9">Know More</a>
             </div>
         </div>
     </div>
