--- a/service.html
+++ b/service.html
@@ -18,11 +18,11 @@
         </div>
         <div class="page">
             <ul type="None">
-                <a href="index.php"><li class="l1">Home</li></a>
-                <a href="medical.php"><li class="l1">Medical</li></a>
-                <a href="index.php"><li class="l1">Contact</li></a>
-                <a href="index.php"><li class="l1">Login</li></a>
-                <a href="index.php" class="about">About Us</a>
+                <a href="index.html"><li class="l1">Home</li></a>
+                <a href="medical.html"><li class="l1">Medical</li></a>
+                <a href="index.html"><li class="l1">Contact</li></a>
+                <a href="Registration.html"><li class="l1">Login</li></a>
+                <a href="Forgotpass.html" class="about">About Us</a>
             </ul>
         </div>     
     </div>
