--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header sticky-top">
         <nav class="navbar navbar-expand-md navbar-light">
-            <a class="navbar-brand" href="index.php">
+            <a class="navbar-brand" href="medical.html">
                 <img src="img/logo 2.png" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#my-navbar">
@@ -32,28 +32,23 @@
     <div id="loading">
     </div>
     <div class="center">
-        <h1>Forgot Password </h1>
-        <form method="post" action="forgot.php">
+        <h1>Login</h1>
+        <form method="post" action="lg.php">
           <div class="txt_field">
             <input type="text" name="mail" id="mail" required>
             <span></span>
-          <label>Enter Your Email</label>
+<label>Enter Your Email</label>
           </div>
           <div class="txt_field">
             <input type="password" name="pass" id="pass" required>
             <span></span>
             <label>Password</label>
           </div>
-           <div class="txt_field">
-            <input type="password" required>
-            <span></span>
-            <label> Confirm Password</label>
-          </div>
-           
-          
-          <input type="submit" value="Submit">
+          <div class="pass">
+            <a href="Forgotpass.html">Forgot Password? </a> </div>
+          <input type="submit" value="Login">
           <div class="signup_link">
-            Go To <a href="Login.php">Login</a>
+            Not a member? <a href="Registration.html">Signup</a>
           </div>
         </form>
       </div>
