added refresh button

--- a/Registration.html
+++ b/Registration.html
@@ -66,6 +66,7 @@
                         </div>
 
           <input type="submit" value="Sign Up">
+              <button type="reset" style="margin-left:35%; padding: 2px; margin-top:5px;">Refresh</button>
           <div class="signup_link">
             Alredy have a account? <a href="Login.html">Login</a>
           </div>
