--- a/Login.html
+++ b/Login.html
@@ -47,6 +47,7 @@
           <div class="pass">
             <a href="Forgotpass.html">Forgot Password? </a> </div>
           <input type="submit" value="Login">
+            <button type="reset" style="margin-left:35%; padding: 2px; margin-top:5px;">Refresh</button>
           <div class="signup_link">
             Not a member? <a href="Registration.html">Signup</a>
           </div>
