added refresh button

--- a/Forgotpass.html
+++ b/Forgotpass.html
@@ -52,6 +52,7 @@
            
           
           <input type="submit" value="Submit">
+            <button type="reset" style="margin-left:35%; padding: 2px; margin-top:5px;">Refresh</button>
           <div class="signup_link">
             Go To <a href="Login.html">Login</a>
           </div>
