--- a/medical.html
+++ b/medical.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Medical</title>
     <link rel="stylesheet" type="text/css" href="css/first.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
             </div>
             <div class="content">
                 <p>Shree Medical</p>
-                <p>Aran</p>
+                <p>Tulasi</p>
                 <a href="service.html#c1" title="Take more information about Shree Medical">Know More</a>
             </div>
         </div>
@@ -55,11 +55,11 @@
 
         <div class="m1">
             <div class="m_img">
-                <img src="assets/anand.jpg" width="180px" height="200px">
+                <img src="assets/gurukrupa.jpg" width="180px" height="200px">
             </div>
             <div class="content">
-                <p>Anand Medical</p>
-                <p>Chale</p>
+                <p>Gurukrupa Medical</p>
+                <p>Barshi</p>
                 <a href="service.html#c3" title="Take more information about Shree Medical">Know More</a>
             </div>
         </div>
